--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -74,7 +74,7 @@ jobs:
     needs: lint-test
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
 
     if: ${{ github.event_name != 'pull_request' }}
