--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -114,23 +114,14 @@ jobs:
           helm push .helm-charts/sopseed-${{ env.CHART_VERSION }}.tgz oci://ghcr.io/${{ github.repository_owner }}/helm
 
       - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
+          name: Release v${{ env.CHART_VERSION }}
           tag_name: v${{ env.CHART_VERSION }}
-          release_name: Release v${{ env.CHART_VERSION }}
           draft: false
           prerelease: false
-
-      - name: Upload Helm Chart to Release
-        uses: actions/upload-release-asset@v1
+          files: .helm-charts/sopseed-${{ env.CHART_VERSION }}.tgz
+          fail_on_unmatched_files: true
+          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: .helm-charts/sopseed-${{ env.CHART_VERSION }}.tgz
-          asset_name: sopseed-${{ env.CHART_VERSION }}.tgz
-          asset_content_type: application/gzip
-
