--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -2,8 +2,8 @@ name: Test and Release sopSeed Helm Chart
 
 on:
   push:
-    tags:
-      - 'sopseed-chart-v[0-9]+.[0-9]+.[0-9]+'
+    paths:
+      - './chart/**'
   pull_request:
     paths:
       - './chart/**'
