fix: ensure target branch is available for chart-testing
- Add dynamic target branch detection
- Fetch target branch explicitly for PR events
- Use github.base_ref for pull requests
- Default to main branch for other events.
Signed-off-by: ossfellow <masoudbahar@gmail.com>

Signed-off-by: ossfellow <masoudbahar@gmail.com>

--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -50,6 +50,8 @@ jobs:
           # Determine the target branch
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
             TARGET_BRANCH="${{ github.base_ref }}"
+            # Fetch the target branch
+            git fetch origin ${TARGET_BRANCH}:${TARGET_BRANCH}
           else
             TARGET_BRANCH="main"
           fi
